--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -8,6 +8,6 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.mokhtar.robustatask.ui.home.HomeFragment"
-        android:label="home_fragment"
+        android:label="@string/home"
         tools:layout="@layout/home_fragment" />
 </navigation>
